--- a/applications.yaml
+++ b/applications.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://github.com/vedantsharma/self-managed-argo
+      repoURL: https://github.com/vedantsharma/self-managed-argo.git
       revision: main
       directories:
       - path: applications/*
@@ -17,10 +17,10 @@ spec:
       name: '{{path.basename}}'
 
     spec:
-      project: go-playground
+      project: cicd
 
       source:
-        repoURL: https://github.com/vedantsharma/self-managed-argo
+        repoURL: https://github.com/vedantsharma/self-managed-argo.git
         targetRevision: main
         path: '{{path}}'
         helm:
