--- a/applications/operators/templates/es-operator.yaml
+++ b/applications/operators/templates/es-operator.yaml
@@ -1,10 +1,10 @@
 apiVersion: operators.coreos.com/v1alpha1 
 kind: Subscription 
 metadata: 
-  name: my-grafana-operator 
+  name: my-external-secrets-operator 
   namespace: operators 
 spec: 
-  channel: v5 
-  name: grafana-operator 
+  channel: stable
+  name: external-secrets-operator 
   source: operatorhubio-catalog 
   sourceNamespace: olm
