[vault] operator init 2

--- a/applications/operators/templates/vault-operator.yaml
+++ b/applications/operators/templates/vault-operator.yaml
@@ -9,7 +9,8 @@ metadata:
   name: operatorgroup 
   namespace: vault 
 spec: 
-  targetNamespaces: - vault 
+  targetNamespaces: 
+  - vault 
 --- 
 apiVersion: operators.coreos.com/v1alpha1 
 kind: Subscription 
