--- a/applications/operators/templates/vault-operator.yaml
+++ b/applications/operators/templates/vault-operator.yaml
@@ -1,22 +1,21 @@
 apiVersion: v1 
 kind: Namespace 
 metadata: 
-  name: vault 
+  name: my-vault 
 --- 
 apiVersion: operators.coreos.com/v1 
 kind: OperatorGroup 
 metadata: 
   name: operatorgroup 
-  namespace: vault 
+  namespace: my-vault 
 spec: 
-  targetNamespaces: 
-  - vault 
+  targetNamespaces: my-vault 
 --- 
 apiVersion: operators.coreos.com/v1alpha1 
 kind: Subscription 
 metadata: 
-  name: vault 
-  namespace: vault 
+  name: my-vault 
+  namespace: my-vault 
 spec: 
   channel: beta 
   name: vault 
