--- a/applications/operators/templates/vault-operator.yaml
+++ b/applications/operators/templates/vault-operator.yaml
@@ -9,7 +9,8 @@ metadata:
   name: operatorgroup 
   namespace: my-vault 
 spec: 
-  targetNamespaces: my-vault 
+  targetNamespaces: 
+  - my-vault 
 --- 
 apiVersion: operators.coreos.com/v1alpha1 
 kind: Subscription 
