--- a/applications/vault/templates/vault.yaml
+++ b/applications/vault/templates/vault.yaml
@@ -94,7 +94,7 @@ spec:
     #               name: vault
     #               port:
     #                 number: 8300
-      tls: {}
+    #   tls: {}
     #   - secretName: vault-ingress-tls
     #     hosts:
     #     - vault.haatcloud.com
@@ -120,7 +120,7 @@ spec:
   ##############################################################################
   ##############################################################################
 
-  caNamespaces: {}
+#   caNamespaces: {}
     # - "cert-issuers"
     # - "external-dns"
     # - "gitlab-runner"
