--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -1,12 +1,8 @@
-apiVersion: v1
-name: istio-operator
-# This version is never actually shipped. istio/release-builder will replace it at build-time
-# with the appropriate version
-version: 1.0.0
-appVersion: 1.0.0
-description: Helm chart for deploying Istio operator
-keywords:
-  - istio
-  - operator
-sources:
-  - https://github.com/istio/istio/tree/master/operator
+apiVersion: v2
+name: istio
+type: application
+version: 0.0.0
+dependencies:
+- name: istio-operator
+  version: 2.13.2
+  repository: "oci://ghcr.io/stevehipwell/helm-charts/istio-operator"
