--- a/applications/istio-system/Chart.yaml
+++ b/applications/istio-system/Chart.yaml
@@ -3,6 +3,6 @@ name: vault
 type: application
 version: 0.0.0
 dependencies:
-- name: istiod
+- name: istio/istiod
   version: 1.20.2
-  repository: "https://istio-release.storage.googleapis.com/charts/istio"
+  repository: "https://istio-release.storage.googleapis.com/charts"
