--- a/applications/istio-system/Chart.yaml
+++ b/applications/istio-system/Chart.yaml
@@ -4,5 +4,6 @@ type: application
 version: 0.0.0
 dependencies:
 - name: istio-operator
+  version: 0.1.21
   repository: "https://kubernetes-charts.banzaicloud.com"
   
