--- a/applications.yaml
+++ b/applications.yaml
@@ -1,9 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: test
+  name: istio-poc
   namespace: argocd
-
 spec:
   generators:
   - git:
@@ -11,14 +10,11 @@ spec:
       revision: main
       directories:
       - path: applications/*
-
   template:
     metadata:
       name: '{{path.basename}}'
-
     spec:
-      project: cicd
-
+      project: istio
       source:
         repoURL: https://github.com/vedantsharma/self-managed-argo.git
         targetRevision: main
@@ -27,23 +23,19 @@ spec:
           releaseName: '{{path.basename}}'
           valueFiles:
           - values.yaml
-
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
-
       # https://github.com/argoproj/argo-cd/issues/5178
       ignoreDifferences:
         - group: ""
           kind: Secret
           jqPathExpressions:
             - select(.metadata.annotations.vaultInjectionChecksum) | .data
-
-      # Sync policy
       syncPolicy:
-        automated: # automated sync by default retries failed attempts 5 times with following delays between attempts ( 5s, 10s, 20s, 40s, 80s ); retry controlled using `retry` field.
-          prune: true # Specifies if resources should be pruned during auto-syncing ( false by default ).
-          selfHeal: true # Specifies if partial app sync should be executed when resources are changed only in target Kubernetes cluster and no git change detected ( false by default ).
-        syncOptions:     # Sync options which modifies sync behavior
-        - CreateNamespace=true # Namespace Auto-Creation ensures that namespace specified as the application destination exists in the destination cluster.
-        - ServerSideApply=true # This option enables Kubernetes Server-Side Apply.
+        automated: 
+          prune: false
+          selfHeal: true 
+        syncOptions:   
+        - CreateNamespace=true
+        - ServerSideApply=true 
