--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -6,9 +6,9 @@ dependencies:
   - name: base
     version: "1.16.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
-  # - name: istiod
-  #   version: "1.16.1"
-  #   repository: "https://istio-release.storage.googleapis.com/charts"
-  # - name: gateway
-  #   version: "0.1.0"
-  #   repository: "https://istio-release.storage.googleapis.com/charts"
+  - name: istiod
+    version: "1.16.1"
+    repository: "https://istio-release.storage.googleapis.com/charts"
+  - name: gateway
+    version: "1.16.1"
+    repository: "https://istio-release.storage.googleapis.com/charts"
