--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -4,11 +4,11 @@ description: A Helm chart for istio which contains base-chart, istiod, gateway
 version: 0.0.1
 dependencies:
   - name: base
-    version: "1.16.1"
+    version: "1.21.0-rc.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
   - name: istiod
-    version: "1.16.1"
+    version: "1.21.0-rc.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
   - name: gateway
-    version: "1.16.1"
+    version: "1.21.0-rc.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
