--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -6,9 +6,9 @@ dependencies:
   - name: base
     version: "1.21.0-rc.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
-  # - name: istiod
-  #   version: "1.21.0-rc.1"
-  #   repository: "https://istio-release.storage.googleapis.com/charts"
+  - name: istiod
+    version: "1.21.0-rc.1"
+    repository: "https://istio-release.storage.googleapis.com/charts"
   # - name: gateway
   #   version: "1.21.0-rc.1"
   #   repository: "https://istio-release.storage.googleapis.com/charts"
