--- a/applications/istio/values.yaml
+++ b/applications/istio/values.yaml
@@ -2,7 +2,7 @@ defaults:
   global:
 
     # Used to locate istiod.
-    istioNamespace: istio-system
+    istioNamespace: istio
     # List of cert-signers to allow "approve" action in the istio cluster role
     #
     # certSigners:
