--- a/applications/istio/values.yaml
+++ b/applications/istio/values.yaml
@@ -338,6 +338,9 @@
       requests:
         cpu: 500m
         memory: 1024Mi
+      limits:
+        cpu: 800m
+        memory: 2048Mi
 
     # Set to `type: RuntimeDefault` to use the default profile if available.
     seccompProfile: {}
