[istio] adding sample app

--- a/applications/istio/values.yaml
+++ b/applications/istio/values.yaml
@@ -508,7 +508,7 @@
 
     #  keep in sync with settings used when installing the Istio CNI chart
   istio_cni:
-    enabled: false
+    enabled: true
     chained: true
 
 ##########################################################################
