--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: istio
-description: A Helm chart for istio which contains base-chart, istiod, gateway
+description: A Helm chart for istio which contains base-chart, istiod, gateway, cni
 version: 0.0.1
 dependencies:
   - name: base
@@ -12,3 +12,6 @@ dependencies:
   - name: gateway
     version: "1.21.0-rc.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
+  - name: cni
+    version: "1.21.0-rc.1"
+    repository: "https://istio-release.storage.googleapis.com/charts" 
