--- a/applications/istio/values.yaml
+++ b/applications/istio/values.yaml
@@ -706,7 +706,7 @@
     # Allow the istio-cni container to run in privileged mode, needed for some platforms (e.g. OpenShift) or features (repairPods)
     # Note that even if this is false, the `istio-cni` container *requires* root privileges on the node to function,
     # and setting this to false does not change that, nor will it run the container as non-root or make it "un-privileged".
-    privileged: true
+    privileged: false
 
     # Custom configuration happens based on the CNI provider.
     # Possible values: "default", "multus"
