--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -3,9 +3,9 @@ name: istio
 description: A Helm chart for istio which contains base-chart, istiod, gateway, cni
 version: 0.0.1
 dependencies:
-  # - name: base
-  #   version: "1.21.0-rc.1"
-  #   repository: "https://istio-release.storage.googleapis.com/charts"
+  - name: base
+    version: "1.21.0-rc.1"
+    repository: "https://istio-release.storage.googleapis.com/charts"
   # - name: istiod
   #   version: "1.21.0-rc.1"
   #   repository: "https://istio-release.storage.googleapis.com/charts"
