[istio] disabled cni

--- a/applications/istio/Chart.yaml
+++ b/applications/istio/Chart.yaml
@@ -12,6 +12,6 @@ dependencies:
   - name: gateway
     version: "1.21.0-rc.1"
     repository: "https://istio-release.storage.googleapis.com/charts"
-  - name: cni
-    version: "1.21.0-rc.1"
-    repository: "https://istio-release.storage.googleapis.com/charts" 
+  # - name: cni
+  #   version: "1.21.0-rc.1"
+  #   repository: "https://istio-release.storage.googleapis.com/charts" 
