--- a/applications/istio/templates/loki.yaml
+++ b/applications/istio/templates/loki.yaml
@@ -253,6 +253,7 @@ spec:
               mountPath: /var/loki
           resources:
             limits:
+              cpu: 500m
               memory: 1Gi
             requests:
               cpu: 100m
