--- a/applications/istio/values.yaml
+++ b/applications/istio/values.yaml
@@ -618,3 +618,9 @@ cni:
     # May be specified as a number of pods or as a percent of the total number
     # of pods at the start of the update.
     rollingMaxUnavailable: 1
+
+#####################
+# gateways
+#####################
+
+#default values applied
