--- a/apps-for-later/istio/Chart.yaml
+++ b/apps-for-later/istio/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: istio
+name: istio-system
 description: A Helm chart for istio which contains base-chart, istiod, gateway, cni
 version: 0.0.1
 dependencies:
