--- a/applications/istio-system/templates/kiali.yaml
+++ b/applications/istio-system/templates/kiali.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kiali
-  namespace: istio
+  namespace: istio-system
   labels:
     helm.sh/chart: kiali-server-1.76.0
     app: kiali
@@ -21,7 +21,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kiali
-  namespace: istio
+  namespace: istio-system
   labels:
     helm.sh/chart: kiali-server-1.76.0
     app: kiali
@@ -69,7 +69,7 @@ data:
         log_level: info
         sampler_rate: "1"
         time_field_format: 2006-01-02T15:04:05Z07:00
-      namespace: istio
+      namespace: istio-system
       node_selector: {}
       pod_annotations: {}
       pod_labels:
@@ -93,11 +93,11 @@ data:
       custom_dashboards:
         enabled: true
       istio:
-        root_namespace: istio
+        root_namespace: istio-system
     identity:
       cert_file: ""
       private_key_file: ""
-    istio_namespace: istio
+    istio_namespace: istio-system
     kiali_feature_flags:
       certificates_information_indicators:
         enabled: true
@@ -336,7 +336,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kiali
-  namespace: istio
+  namespace: istio-system
 ...
 ---
 # Source: kiali-server/templates/role-controlplane.yaml
@@ -344,7 +344,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: kiali-controlplane
-  namespace: istio
+  namespace: istio-system
   labels:
     helm.sh/chart: kiali-server-1.76.0
     app: kiali
@@ -372,7 +372,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: kiali-controlplane
-  namespace: istio
+  namespace: istio-system
   labels:
     helm.sh/chart: kiali-server-1.76.0
     app: kiali
@@ -389,7 +389,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kiali
-  namespace: istio
+  namespace: istio-system
 ...
 ---
 # Source: kiali-server/templates/service.yaml
@@ -397,7 +397,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kiali
-  namespace: istio
+  namespace: istio-system
   labels:
     helm.sh/chart: kiali-server-1.76.0
     app: kiali
@@ -428,7 +428,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kiali
-  namespace: istio
+  namespace: istio-system
   labels:
     helm.sh/chart: kiali-server-1.76.0
     app: kiali
