--- a/applications/istio-system/templates/prometheus.yaml
+++ b/applications/istio-system/templates/prometheus.yaml
@@ -10,7 +10,7 @@ metadata:
     chart: prometheus-19.6.1
     heritage: Helm
   name: prometheus
-  namespace: istio
+  namespace: istio-system
   annotations:
     {}
 ---
@@ -25,7 +25,7 @@ metadata:
     chart: prometheus-19.6.1
     heritage: Helm
   name: prometheus
-  namespace: istio
+  namespace: istio-system
 data:
   allow-snippet-annotations: "false"
   alerting_rules.yml: |
@@ -395,7 +395,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: prometheus
-    namespace: istio
+    namespace: istio-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -412,7 +412,7 @@ metadata:
     chart: prometheus-19.6.1
     heritage: Helm
   name: prometheus
-  namespace: istio
+  namespace: istio-system
 spec:
   ports:
     - name: http
@@ -437,7 +437,7 @@ metadata:
     chart: prometheus-19.6.1
     heritage: Helm
   name: prometheus
-  namespace: istio
+  namespace: istio-system
 spec:
   selector:
     matchLabels:
