[istio] init gateway

--- a/applications/sample/templates/gateway.yaml
+++ b/applications/sample/templates/gateway.yaml
@@ -4,7 +4,7 @@ metadata:
   name: bookinfo-gateway
 spec:
   selector:
-    istio: istio
+    istio: system
   servers:
   - port:
       number: 80
